[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/classes/Entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://dat/sprites/Pixel-Platformer/Tilemap/tiles.png" type="Texture" id=2]
[ext_resource path="res://dat/sound/player/coin.wav" type="AudioStream" id=3]
[ext_resource path="res://src/items/Coin.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 223, 143, 12, 12 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "spin"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 223, 143, 12, 12 ), Rect2( 245, 143, 8, 12 ) ]
}

[sub_resource type="Curve" id=7]
max_value = 100.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.497872, 100 ), 160.227, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 7 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=9]
lifetime_randomness = 0.5
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 64.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping_curve = SubResource( 4 )
scale_curve = SubResource( 6 )

[node name="Coin" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, -16 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 223, 143, 12, 12 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "spin"
anims/RESET = SubResource( 2 )
anims/spin = SubResource( 3 )

[node name="PickupSND" type="AudioStreamPlayer2D" parent="." index="3"]
position = Vector2( 0, -16 )
stream = ExtResource( 3 )
bus = "Pickups"

[node name="PickupFX" type="Particles2D" parent="." index="4"]
position = Vector2( 0, -16 )
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 9 )

[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
